# Makefile.am -- Process this file with automake to produce Makefile.in
bin_PROGRAMS = ndstool

ndstool_SOURCES	=	source/banner.cpp source/banner.h source/bigint.cpp source/bigint.h \
		source/compile_date.c source/crc.cpp source/crc.h source/default_icon.c \
		source/default_icon.h source/elf.cpp source/elf.h source/encryption.cpp \
		source/encryption.h source/header.cpp source/header.h source/hook.cpp \
		source/hook.h source/little.h source/loadme.c source/loadme.h source/logo.cpp \
		source/logo.h source/ndscodes.cpp source/ndscreate.cpp source/ndscreate.h \
		source/ndsextract.cpp source/ndsextract.h source/ndstool.cpp source/ndstool.h \
		source/ndstree.cpp source/ndstree.h source/overlay.h source/raster.cpp \
		source/raster.h source/sha1.cpp source/sha1.hsource/types.h

EXTRA_DIST = autogen.sh default_icon.bmp
